--- a/monitor/Cargo.toml
+++ b/monitor/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+human_bytes = "0.4.2"
 log = "0.4.19"
 sysinfo = "0.29.2"
